--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -28,6 +28,12 @@
   width: 200px;
 }
 
+.app_headerUsername {
+  display: flex;
+  flex-shrink: 1;
+  width: 200px;
+}
+
 .app_signin {
   display: flex;
   flex-direction: column;
